--- a/css/styles.css
+++ b/css/styles.css
@@ -1,133 +1,229 @@
-body{
-    font-family: 'Montserrat', sans-serif;
+body {
+  font-family: "Montserrat", sans-serif;
 }
 
-#title{
-    background-color: #ff4c68;
-    color: #fff;
+#title {
+  background-color: #ff4c68;
+  color: #fff;
 }
 
-#headline{
-    font-family: 'Montserrat-Black', sans-serif;
-    font-size: 3.5rem;
-    line-height: 1.5;
-    font-weight: 900;
+#headline {
+  font-family: "Montserrat-Black", sans-serif;
+  font-size: 3.5rem;
+  line-height: 1.5;
+  font-weight: 900;
 }
 
-.container-fluid{
-    padding: 3% 15%;
+.container-fluid {
+  padding: 3% 15% 7%;
 }
-
-
 
 /* navigation bar */
 
-.navbar{
-    padding: 0 0 4.5rem;
+.navbar {
+  padding: 0 0 4.5rem;
 }
-.navbar-brand{
-    font-family: 'Ubuntu', sans-serif;
-    font-size: 2.5rem;
-    font-weight: 900;
+.navbar-brand {
+  font-family: "Ubuntu", sans-serif;
+  font-size: 2.5rem;
+  font-weight: 900;
 }
-.nav-item{
-    padding:0 18px;
-}
-
-.nav-link{
-    font-size: 1.2rem;
-    font-family: 'Montserrat-Light', sans-serif;
-    font-weight: 300;
+.nav-item {
+  padding: 0 18px;
 }
 
+.nav-link {
+  font-size: 1.2rem;
+  font-family: "Montserrat-Light", sans-serif;
+  font-weight: 300;
+}
 
 /* download buttons */
 
-.download-button{
-    margin: 5% 3% 5% 0;
+.download-button {
+  margin: 5% 3% 5% 0;
 }
 
 /* title image */
-#title-image{
-    margin-left: 4rem;
-    width: 60%;
-    transform: rotate(25deg);
-}
 
+.image-container {
+  position: relative;
+}
+#title-image {
+  width: 50%;
+  transform: rotate(25deg);
+  position: absolute;
+  right: 30%;
+}
 
 /* features  */
 
-#features{
-    padding: 7% 12%;
+#features {
+  padding: 7% 15%;
+  background-color: #fff;
+  position: relative;
 }
 
-.feature-box{
-    text-align: center;
-    padding: 0 5% 1%;
-    height: 100%;
-    
+.feature-box {
+  text-align: center;
+  padding: 0 5% 1%;
+  height: 100%;
 }
 
-.fa-solid {
-    color: #ef8172;
-    margin-bottom: 1.5rem;
-    transition: 0.2s;
+.feature-icon {
+  color: #ef8172;
+  margin-bottom: 1.5rem;
+  transition: 0.2s;
 }
 
-.fa-solid:hover{
-    color: #ff4c68;
-    transform: scale(1.3);
+.feature-icon:hover {
+  color: #ff4c68;
+  transform: scale(1.3);
 }
 
-.features-title{
-    font-family: 'Monteserrat-Bold', sans-serif;
-    font-size: 1.5rem;
-    font-weight: 800;;
+.features-title {
+  font-family: "Monteserrat-Bold", sans-serif;
+  font-size: 1.5rem;
+  font-weight: 800;
 }
 
-.features-subtitle{
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 500;
-    color: #8f8f8f;
-   
-}   
+.features-subtitle {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  color: #8f8f8f;
+}
 
 /* testimonials */
 
-#testimonials{
-    text-align: center;
-    background-color: #ff4c68;
-    color: #fff;
+#testimonials {
+  text-align: center;
+  background-color: #ff4c68;
+  color: #fff;
 }
 
-.carousel-item{
-    padding: 7% 15%;
+.carousel-item {
+  padding: 7% 15%;
 }
 
-.testimonial-text{
-    font-family: 'Montserrat-Bold-Italic ', sans-serif;
-    font-size: 3rem;
-    font-weight: 800;
-    line-height: 1.5;
-    padding: 0 10%;
-    font-style: italic;
+.testimonial-text {
+  font-family: "Montserrat-Bold-Italic ", sans-serif;
+  font-size: 3rem;
+  font-weight: 800;
+  line-height: 1.5;
+  padding: 0 10%;
+  font-style: italic;
 }
 
-.testimonial-image{
-    width:10%;
-    border-radius: 100%;
-    margin: 20px;
+.testimonial-image {
+  width: 10%;
+  border-radius: 100%;
+  margin: 20px;
 }
-
 
 /* press */
-#press{
-    background-color: #ff4c68;
-    text-align: center;
-    padding-bottom: 3%;
+#press {
+  background-color: #ff4c68;
+  text-align: center;
+  padding-bottom: 3%;
 }
 
-.press-image{
-    width: 15%;
-    margin: 20px 20px 50px;
+
+.press-image {
+  width: 15%;
+  margin: 20px 20px 50px;
+  filter: drop-shadow(0px 0px 8px #222) ;
+  /* box-shadow: #000 0px 0px 15px; */
+}
+
+/* pricing */
+
+#pricing {
+  text-align: center;
+  padding: 7% 15%;
+}
+
+.card {
+  margin: 2% 0;
+}
+
+.pricing-table {
+  padding: 3% 2%;
+}
+
+.card-header {
+  vertical-align: auto;
+  background-color: #ff4c68;
+}
+
+/* customised buttons */
+
+    .btn.btn-lg.btn-outline-dark.w-100 {
+    color: #ef8172; /* change this to your preferred text color */
+    border-color: #ff4c68; /* change this to your preferred border color */
+    background-color: #fff; /* change this to your preferred background color */
+    }
+
+    .btn.btn-lg.btn-outline-dark.w-100:hover {
+    color: #fff; /* change this to your preferred hover text color */
+    background-color: #ff4c68; /* change this to your preferred hover background color */
+    border-color: #ff4c68; /* change this to your preferred hover border color */
+    }
+
+    .btn.btn-lg.btn-dark.w-100 {
+    color: #fff; /* change this to your preferred text color */
+    border-color: #ff4c68; /* change this to your preferred border color */
+    background-color: #ff4c68; /* change this to your preferred background color */
+    }
+
+    .btn.btn-lg.btn-dark.w-100:hover {
+    background-color: #ff6c8b; /* change this to your preferred hover background color */
+    border-color: #ff6c8b; /* change this to your preferred hover border color */
+    }
+
+@media (max-width: 1028px) {
+  #title {
+    text-align: center;
+  }
+  #title-image {
+    width: 40%;
+    transform: rotate(0);
+    position: static;
+  }
+}
+
+/* cta */
+
+#cta {
+  background-color: #ff4c68;
+  text-align: center;
+  padding: 3% 15%;
+}
+
+.cta-heading {
+  font-family: "Montserrat-Black", sans-serif;
+  font-size: 3.5rem;
+  font-weight: 900;
+  line-height: 1.5;
+}
+
+
+/* footer */
+
+#footer{
+    text-align: center;
+    background-color: #fff;
+    padding: 7% 15% 1%;
+}
+
+.footer-title{
+    font-family: 'Montserrat-Bold', sans-serif;
+    font-size: 1rem;
+    font-weight: 700;
+    color: #8f8f8f;
+}
+
+.footer-social-icons{
+    transform: scale(1.3);
+    margin: 0% 2% 2%;
+    color: black;
 }
