--- a/css/styles.css
+++ b/css/styles.css
@@ -1,22 +1,40 @@
 body {
   font-family: "Montserrat", sans-serif;
+  text-align: center
 }
 
-#title {
+.container-fluid {
+  padding: 7% 15%;
+}
+
+/* section */
+
+.colored-section{
   background-color: #ff4c68;
   color: #fff;
 }
 
-#headline {
+.white-section{
+  background-color: #fff;
+}
+
+
+/* title */
+
+
+#title .container-fluid {
+  padding: 3% 15% 7%;
+  text-align: left;
+}
+
+.big-headline {
   font-family: "Montserrat-Black", sans-serif;
   font-size: 3.5rem;
   line-height: 1.5;
   font-weight: 900;
 }
 
-.container-fluid {
-  padding: 3% 15% 7%;
-}
+
 
 /* navigation bar */
 
@@ -59,13 +77,10 @@ body {
 /* features  */
 
 #features {
-  padding: 7% 15%;
-  background-color: #fff;
   position: relative;
 }
 
 .feature-box {
-  text-align: center;
   padding: 0 5% 1%;
   height: 100%;
 }
@@ -95,14 +110,8 @@ body {
 
 /* testimonials */
 
-#testimonials {
-  text-align: center;
-  background-color: #ff4c68;
-  color: #fff;
-}
-
-.carousel-item {
-  padding: 7% 15%;
+#testimonials{
+  background-color: #ef8172;
 }
 
 .testimonial-text {
@@ -122,8 +131,7 @@ body {
 
 /* press */
 #press {
-  background-color: #ff4c68;
-  text-align: center;
+  background-color: #ef8172;
   padding-bottom: 3%;
 }
 
@@ -131,16 +139,10 @@ body {
 .press-image {
   width: 15%;
   margin: 20px 20px 50px;
-  filter: drop-shadow(0px 0px 8px #222) ;
-  /* box-shadow: #000 0px 0px 15px; */
+  filter: drop-shadow(0px 0px 8px #00000072) ;
 }
 
 /* pricing */
-
-#pricing {
-  text-align: center;
-  padding: 7% 15%;
-}
 
 .card {
   margin: 2% 0;
@@ -165,8 +167,8 @@ body {
 
     .btn.btn-lg.btn-outline-dark.w-100:hover {
     color: #fff; /* change this to your preferred hover text color */
-    background-color: #ff4c68; /* change this to your preferred hover background color */
-    border-color: #ff4c68; /* change this to your preferred hover border color */
+    background-color: #ff6c8b; /* change this to your preferred hover background color */
+    border-color: #ff6c8b; /* change this to your preferred hover border color */
     }
 
     .btn.btn-lg.btn-dark.w-100 {
@@ -180,38 +182,18 @@ body {
     border-color: #ff6c8b; /* change this to your preferred hover border color */
     }
 
-@media (max-width: 1028px) {
-  #title {
-    text-align: center;
-  }
-  #title-image {
-    width: 40%;
-    transform: rotate(0);
-    position: static;
-  }
-}
-
+    
 /* cta */
 
 #cta {
-  background-color: #ff4c68;
-  text-align: center;
-  padding: 3% 15%;
+  padding: 5% 15%;
 }
 
-.cta-heading {
-  font-family: "Montserrat-Black", sans-serif;
-  font-size: 3.5rem;
-  font-weight: 900;
-  line-height: 1.5;
-}
 
 
 /* footer */
 
 #footer{
-    text-align: center;
-    background-color: #fff;
     padding: 7% 15% 1%;
 }
 
@@ -223,7 +205,20 @@ body {
 }
 
 .footer-social-icons{
-    transform: scale(1.3);
+    transform: scale(1.2);
     margin: 0% 2% 2%;
     color: black;
 }
+
+
+@media (max-width: 1028px) {
+  #title {
+    text-align: center;
+  }
+  #title-image {
+    width: 40%;
+    transform: rotate(0);
+    position: static;
+  }
+}
+
